<resources>
    <string name="app_name">Togather</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="questions">Questions</string>

    <!-- Action bar strings -->
    <string name="action_settings">Settings</string>
</resources>
